--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.13",
+    "@dynamic-labs/ethereum": "^3.0.0-alpha",
     "@dynamic-labs/sdk-react-core": "^3.0.0-alpha",
-    "viem": "*",
     "@dynamic-labs/wagmi-connector": "^3.0.0-alpha",
     "@tanstack/react-query": "^5.27.5",
-    "wagmi": "^2.5.7",
-    "@dynamic-labs/ethereum": "^3.0.0-alpha"
+    "@worldcoin/idkit": "^1.3.0",
+    "next": "14.2.13",
+    "react": "^18",
+    "react-dom": "^18",
+    "viem": "*",
+    "wagmi": "^2.5.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13"
+    "eslint-config-next": "14.2.13",
+    "typescript": "^5"
   }
 }
