--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@dynamic-labs/ethereum": "^3.0.0-alpha",
     "@dynamic-labs/sdk-react-core": "^3.0.0-alpha",
     "@dynamic-labs/wagmi-connector": "^3.0.0-alpha",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.27.5",
     "@worldcoin/idkit": "^1.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "viem": "*",
     "wagmi": "^2.5.7"
   },
@@ -26,6 +33,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5"
   }
 }
