--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dynamic-labs/sdk-react-core": "^3.0.0-alpha",
     "@dynamic-labs/wagmi-connector": "^3.0.0-alpha",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.27.5",
     "@worldcoin/idkit": "^1.3.0",
