--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dynamic-labs/ethereum": "^3.0.0-alpha",
     "@dynamic-labs/sdk-react-core": "^3.0.0-alpha",
     "@dynamic-labs/wagmi-connector": "^3.0.0-alpha",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
