--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@dynamic-labs/ethereum": "^3.0.0-alpha",
     "@dynamic-labs/sdk-react-core": "^3.0.0-alpha",
     "@dynamic-labs/wagmi-connector": "^3.0.0-alpha",
+    "@ensdomains/ensjs": "4.0.1-alpha.0",
+    "@ethsign/sp-sdk": "^0.7.5",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
